<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ersiver.filmflop.ui.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/grid_2"
        android:paddingTop="@dimen/grid_2"
        tools:context=".ui.detail.DetailFragment"
        tools:showIn="@layout/fragment_detail">

        <TextView
            android:id="@+id/overview"
            style="@style/FilmFlopOverviewText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.movie.overview}"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/description" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/grid_1"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/rating_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview" />

        <ImageView
            android:id="@+id/rating_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_1"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/rating_icon"
            android:src="@drawable/ic_baseline_star_border_24"
            app:layout_constraintBottom_toTopOf="@+id/genre_image"
            app:layout_constraintEnd_toStartOf="@+id/rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/rating"
            style="@style/FilmFlopBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_1"
            android:layout_marginTop="@dimen/grid_1"
            app:layout_constraintBottom_toBottomOf="@id/rating_image"
            app:layout_constraintStart_toEndOf="@+id/rating_image"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:rating="@{viewModel.movie.rating}"
            tools:text="3/10" />


        <ImageView
            android:id="@+id/genre_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_1"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/category_icon"
            android:src="@drawable/ic_baseline_category_24"
            app:layout_constraintEnd_toStartOf="@+id/genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating" />

        <TextView
            android:id="@+id/genre"
            style="@style/FilmFlopBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_1"
            android:layout_marginTop="8dp"
            app:genres="@{viewModel.movie.genreNames}"
            app:layout_constraintBottom_toBottomOf="@id/genre_image"
            app:layout_constraintStart_toEndOf="@+id/genre_image"
            app:layout_constraintTop_toBottomOf="@+id/rating"
            tools:text="@string/genres_tools" />

        <ImageView
            android:id="@+id/release_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_1"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/date_icon"
            android:src="@drawable/ic_baseline_date_range_24"
            app:layout_constraintEnd_toStartOf="@+id/release"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genre_image" />

        <TextView
            android:id="@+id/release"
            style="@style/FilmFlopBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_1"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.movie.releaseDate}"
            app:layout_constraintBottom_toBottomOf="@id/release_image"
            app:layout_constraintStart_toEndOf="@+id/release_image"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            tools:text="2019" />

        <ImageView
            android:id="@+id/language_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_1"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/language_icon"
            android:src="@drawable/ic_baseline_language_24"
            app:layout_constraintEnd_toStartOf="@+id/language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/release_image" />

        <TextView
            android:id="@+id/language"
            style="@style/FilmFlopBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_1"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.movie.language}"
            app:layout_constraintBottom_toBottomOf="@id/language_image"
            app:layout_constraintStart_toEndOf="@+id/language_image"
            app:layout_constraintTop_toBottomOf="@+id/release"
            tools:text="en" />

        <com.google.android.material.button.MaterialButton
            style="@style/FilmFlopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_2"
            android:layout_marginBottom="@dimen/grid_2"
            android:onClick="@{()-> viewModel.onTrailerClicked()}"
            android:text="@string/trailer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/language_image" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>